Prevented header flicker on page load (more evident on WebKit browsers)
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10270 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 36c54453c1544b85409c1aba373593cf2fe23dab

--- a/root/projects/slingshot/source/web/components/header/header.css
+++ b/root/projects/slingshot/source/web/components/header/header.css
@@ -126,6 +126,11 @@
 	cursor: default;
 }
 
+.header .hidden
+{
+   display: none;
+}
+
 .header .searchtoggle
 {
 	visibility: hidden;
@@ -154,7 +159,7 @@
 .header .bd .searchtoggle .searchtoggleitemlabel
 {
 	color: #fff;
-	cursor:pointer;
+	cursor: pointer;
 	padding: 4px;
 	padding-right: 10px;	
 	padding-left: 10px;		
